--- a/Ex2/New-arrivals.html
+++ b/Ex2/New-arrivals.html
@@ -159,22 +159,129 @@
                 <div class="row">
                     <div class="col-xs-0 col-sm-3 col-md-3">
                         <div class="block-cover">
-                            <div class="block">
-                                <div class="block-title">
-                                    <a href="">DANH MỤC</a>
+                            <div class="block-options">
+                                <div class="block-options-title">
+                                    <a href="">OLIVIA BURTON</a>
                                 </div>
-                                <div class="block-content">
+                                <div class="block-options-content">
                                     <ul>
-                                        <li><a href="">olivia burton</a></li>
+                                        <li><a href="">Đồng hồ</a></li>
+                                        <li><a href="">Trang sức và phụ kiện</a></li>
+                                        <li><a href="">Strap</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="block-options">
+                                <div class="block-options-title">
+                                    <a href="">Mặt</a>
+                                </div>
+                                <div class="block-options-content">
+                                    <ul>
+                                        <li><a href="">
+                                                <input type="checkbox" > mặt chữ nhật
+                                                <span class="checkmark"></span>
+                                        </a></li>
+                                        <li><a href="">
+                                                <input type="checkbox" > mặt vuông
+                                                <span class="checkmark"></span>
+                                        </a></li>
+                                        <li><a href="">
+                                                <input type="checkbox" > mặt tròn
+                                                <span class="checkmark"></span>
+                                        </a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="block-options">
+                                <div class="block-options-title">
+                                    <a href="">DÂY</a>
+                                </div>
+                                <div class="block-options-content">
+                                    <ul>
+                                        <li><a href="">
+                                                <input type="checkbox" > dây mesh
+                                                <span class="checkmark"></span>
+                                        </a></li>
+                                        <li><a href="">
+                                                <input type="checkbox" > dây kim loại
+                                                <span class="checkmark"></span>
+                                        </a></li>
+                                        <li><a href="">
+                                                <input type="checkbox" > dây da
+                                                <span class="checkmark"></span>
+                                        </a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="block-options">
+                                <div class="block-options-title">
+                                    <a href="">VỎ MÁY</a>
+                                </div>
+                                <div class="block-options-content">
+                                    <ul>
+                                        <li><a href="">
+                                                <input type="checkbox" > gold
+                                                <span class="checkmark"></span>
+                                        </a></li>
+                                        <li><a href="">
+                                                <input type="checkbox" > rose gold
+                                                <span class="checkmark"></span>
+                                        </a></li>
+                                        <li><a href="">
+                                                <input type="checkbox" > bạc
+                                                <span class="checkmark"></span>
+                                        </a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="block-options">
+                                <div class="block-options-title">
+                                    <a href="">ĐƯỜNG KÍNH</a>
+                                </div>
+                                <div class="block-options-content">
+                                    <ul>
+                                        <li><a href="">
+                                                <input type="checkbox" > 20,5mm
+                                                <span class="checkmark"></span>
+                                        </a></li>
+                                        <li><a href="">
+                                                <input type="checkbox" > 22,5mm
+                                                <span class="checkmark"></span>
+                                        </a></li>
+                                        <li><a href="">
+                                                <input type="checkbox" > 38mm
+                                                <span class="checkmark"></span>
+                                        </a></li>
+                                        <li><a href="">
+                                                <input type="checkbox" > 34mm
+                                                <span class="checkmark"></span>
+                                        </a></li>
+                                        <li><a href="">
+                                                <input type="checkbox" > 30mm
+                                                <span class="checkmark"></span>
+                                        </a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="block-options">
+                                <div class="block-options-title">
+                                    <a href="">CHƯƠNG TRÌNH LIÊN KẾT</a>
+                                </div>
+                                <div class="block-options-content block-margin">
+                                    <ul>
+                                        <li><a href="">
+                                                <input type="checkbox" > vinid -50%
+                                                <span class="checkmark"></span>
+                                        </a></li>
                                         
                                     </ul>
                                 </div>
                             </div>
-                            <div class="block">
-                                <div class="block-title">
+                            <div class="block-options">
+                                <div class="block-options-title">
                                     <a href="">THƯƠNG HIỆU</a>
                                 </div>
-                                <div class="block-content">
+                                <div class="block-options-content">
                                     <ul>
                                         <li><a href="">olivia burton</a></li>
                                     </ul>
