--- a/Ex2/Olivia-burton.html
+++ b/Ex2/Olivia-burton.html
@@ -137,11 +137,11 @@
                 <div class="row">
                     <div class="col-xs-0 col-sm-3 col-md-3">
                         <div class="block-cover">
-                            <div class="block">
-                                <div class="block-title">
+                            <div class="block-options">
+                                <div class="block-options-title">
                                     <a href="">OLIVIA BURTON</a>
                                 </div>
-                                <div class="block-content">
+                                <div class="block-options-content">
                                     <ul>
                                         <li><a href="">Đồng hồ</a></li>
                                         <li><a href="">Trang sức và phụ kiện</a></li>
