--- a/Ex2/chi-tiet.html
+++ b/Ex2/chi-tiet.html
@@ -319,6 +319,14 @@
                                             ĐỒNG HỒ OLIVIA BURTON GUTTER DIAL SLIVER STAINLESS STEEL</a>
                                         <div class="price-sp">5,570,000</div>
                                     </div>
+                                    <div class="col-xs-6 col-sm-3 col-md-3">
+                                        <a href="" class="border-sp-lien-quan">
+                                            <img src="https://traffic-edge39.cdn.vncdn.io/cdn-pos/63947a-34605/ps/20230302_k110kbkF1NFHhWUM.webp" alt="sp-lien-quan">
+                                        </a>
+                                        <a class="sp-lien-quan-content" href="" title="ĐỒNG HỒ OLIVIA BURTON GUTTER DIAL SLIVER STAINLESS STEEL">
+                                            ĐỒNG HỒ OLIVIA BURTON GUTTER DIAL SLIVER STAINLESS STEEL</a>
+                                        <div class="price-sp">5,570,000</div>
+                                    </div>
                                 </div>
                             </div> 
                         </div>
