--- a/Ex2/chi-tiet.html
+++ b/Ex2/chi-tiet.html
@@ -76,7 +76,7 @@
 
                                 <div class="gio_hang">
                                     <div class="icon_menu" >
-                                        <a href="" onclick="openNav()">
+                                        <a href="javascript:;" onclick="openNav()">
                                             <img src="images/menu.svg"
                                                 alt="menu">
                                         </a>
@@ -129,6 +129,40 @@
                 </div>
             </div>
         </nav>
+
+        <div class="menu-mobile">
+            <nav id="menu">
+                <div class="menu-title">Menu</div>
+                <a class="close-menu" onclick="closeNav()">x</a>
+                <ul id="panel-menu">
+                    <li class="mobile-title"><a href="">GIỚI THIỆU</a></li>
+                    <li class="mobile-title"><a href="#menu2" data-toggle="collapse" data-parent="#accordion">OLIVIA BURTON
+                        <span class="glyphicon glyphicon-menu-down"></span>
+                    </a>
+                    </li>
+                    <div id="menu2" class="panel-collapse collapse">
+                        <div class="panel-body-2">
+                            <a href=""><span class="glyphicon glyphicon-menu-right"></span> ĐỒNG HỒ</a>
+                            <a href=""><span class="glyphicon glyphicon-menu-right"></span> TRANG SỨC</a>
+                            <a href=""><span class="glyphicon glyphicon-menu-right"></span> DÂY</a>
+                        </div>
+                    </div>
+                    <li class="mobile-title"><a href="">NEW ARRIVALS</a>
+                    </li>
+                    <li class="mobile-title"><a href="">SALE
+                        <img src="https://traffic-edge12.cdn.vncdn.io/cdn-pos/63947a-34605/menu/20220705_8c8ANfiR266w1iUrIOomuC2C.png"
+                            alt="img-sale">
+                    </a>
+                    </li>
+                    <li class="mobile-title"><a href="">TIN TỨC</a></li>
+                </ul>
+                <div class="nguoi-dung">
+                    <a class="dang-ky" href=""><span class="glyphicon glyphicon-user"></span> Đăng ký</a>
+                    <a class="dang-nhap" href=""><span class="glyphicon glyphicon-log-in"></span> Đăng nhập</a>
+                </div>
+            </nav>
+    
+        </div>
          
     </head>
 
