--- a/Ex2/Ex2.html
+++ b/Ex2/Ex2.html
@@ -32,16 +32,16 @@
 <body>
 
     <head>
-        <div id="background_header_1">
+        <div id="background-header-1">
             <div class="wrap">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-6 col-md-6">
-                            <div class="header1_left">
-                                <span class="header1_left_space">
+                            <div class="header1-left">
+                                <span class="header1-left-space">
                                     Miễn phí vận chuyển
                                 </span>
-                                <span class="header1_left_space">
+                                <span class="header1-left-space">
                                     Hỗ trợ 1 đổi 1
                                 </span>
                                 <span>
@@ -50,14 +50,14 @@
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-6">
-                            <div class="headder1_right">
-                                <a href="#" class="hearder1_right_space"><span>
+                            <div class="headder1-right">
+                                <a href="#" class="hearder1-right-space"><span>
                                         Đăng ký
                                     </span></a>
-                                <a href="#" class="hearder1_right_space"><span>
+                                <a href="#" class="hearder1-right-space"><span>
                                         Đăng nhập
                                     </span></a>
-                                <a class="color_black" href="#"><span>
+                                <a class="color-black" href="#"><span>
                                         Hệ thống showroom
                                     </span></a>
                             </div>
@@ -68,7 +68,7 @@
             </div>
         </div>
 
-        <div id="background_header_2">
+        <div id="background-header-2">
             <div class="wrap">
                 <div class="container-fluid">
                     <div class="row">
@@ -81,25 +81,27 @@
                                     </a>
                                 </div>
 
-                                <div class="gio_hang">
-                                    <div class="icon_menu">
+                                <div class="gio-hang">
+                                    <div class="icon-menu">
                                         <a href="javascript:;" onclick="openNav()">
                                             <img src="images/menu.svg" alt="menu">
                                         </a>
                                     </div>
 
-                                    <div class="icon_gio_hang">
+                                    <div class="icon-gio-hang">
                                         <a href="#">
                                             <img src="https://trinitystudio.vn/tp/T0250/img/temp/shopping-bag.png"
-                                                alt="gio_hang">
+                                                alt="gio-hang">
                                         </a>
                                     </div>
 
-                                    <div class="tim_kiem">
+                                    <div class="tim-kiem">
                                         <form action="" class="search">
                                             <input type="text" class="searchTerm" placeholder="Tìm kiếm...">
                                             <button type="submit" class="searchButton" title="Search"><span
-                                                    class="glyphicon glyphicon-search"></span></button>
+                                                class="glyphicon glyphicon-search"></span></button>
+                                            
+                                            
 
                                     </div>
                                     </form>
@@ -179,7 +181,7 @@
         </div>
     </head>
 
-    <section>
+    <div class="space-main">
         <div id="banner">
             <div id="owl-banner" class="owl-carousel owl-theme">
                 <a href=""><img
@@ -191,9 +193,9 @@
             </div>
             <div class="clearfix"></div>
         </div>
-    </section>
+    </div>
 
-    <section>
+    <div class="space-main">
         <div id="product">
             <div class="wrap">
                 <div class="container-fluid">
@@ -210,10 +212,10 @@
                                         <a href="">
                                             <img class="img-main"
                                                 src="https://traffic-edge23.cdn.vncdn.io/cdn-pos/63947a-34605/ps/20221221_F9QAz6z8mObiaLZivYNfwdCL.png"
-                                                alt="dong_ho">
+                                                alt="dong-ho">
                                             <img class="img-hover"
                                                 src="https://traffic-edge09.cdn.vncdn.io/cdn-pos/63947a-34605/ps/20230103_Hbpcg4pjkLfhoSuwjXLxEsyx.png"
-                                                alt="dong_ho_2">
+                                                alt="dong-ho-2">
                                         </a>
                                         <a class="btn-xem-nhanh" href="">
                                             XEM NHANH
@@ -235,10 +237,10 @@
                                         <a href="">
                                             <img class="img-main"
                                                 src="https://traffic-edge23.cdn.vncdn.io/cdn-pos/63947a-34605/ps/20221221_F9QAz6z8mObiaLZivYNfwdCL.png"
-                                                alt="dong_ho">
+                                                alt="dong-ho">
                                             <img class="img-hover"
                                                 src="https://traffic-edge09.cdn.vncdn.io/cdn-pos/63947a-34605/ps/20230103_Hbpcg4pjkLfhoSuwjXLxEsyx.png"
-                                                alt="dong_ho_2">
+                                                alt="dong-ho-2">
                                         </a>
                                         <a class="btn-xem-nhanh" href="">
                                             XEM NHANH
@@ -259,10 +261,10 @@
                                         <a href="">
                                             <img class="img-main"
                                                 src="https://traffic-edge23.cdn.vncdn.io/cdn-pos/63947a-34605/ps/20221221_F9QAz6z8mObiaLZivYNfwdCL.png"
-                                                alt="dong_ho">
+                                                alt="dong-ho">
                                             <img class="img-hover"
                                                 src="https://traffic-edge09.cdn.vncdn.io/cdn-pos/63947a-34605/ps/20230103_Hbpcg4pjkLfhoSuwjXLxEsyx.png"
-                                                alt="dong_ho_2">
+                                                alt="dong-ho-2">
                                         </a>
                                         <a class="btn-xem-nhanh" href="">
                                             XEM NHANH
@@ -283,10 +285,10 @@
                                         <a href="">
                                             <img class="img-main"
                                                 src="https://traffic-edge23.cdn.vncdn.io/cdn-pos/63947a-34605/ps/20221221_F9QAz6z8mObiaLZivYNfwdCL.png"
-                                                alt="dong_ho">
+                                                alt="dong-ho">
                                             <img class="img-hover"
                                                 src="https://traffic-edge09.cdn.vncdn.io/cdn-pos/63947a-34605/ps/20230103_Hbpcg4pjkLfhoSuwjXLxEsyx.png"
-                                                alt="dong_ho_2">
+                                                alt="dong-ho-2">
                                         </a>
                                         <a class="btn-xem-nhanh" href="">
                                             XEM NHANH
@@ -307,10 +309,10 @@
                                         <a href="">
                                             <img class="img-main"
                                                 src="https://traffic-edge23.cdn.vncdn.io/cdn-pos/63947a-34605/ps/20221221_F9QAz6z8mObiaLZivYNfwdCL.png"
-                                                alt="dong_ho">
+                                                alt="dong-ho">
                                             <img class="img-hover"
                                                 src="https://traffic-edge09.cdn.vncdn.io/cdn-pos/63947a-34605/ps/20230103_Hbpcg4pjkLfhoSuwjXLxEsyx.png"
-                                                alt="dong_ho_2">
+                                                alt="dong-ho-2">
                                         </a>
                                         <a class="btn-xem-nhanh" href="">
                                             XEM NHANH
@@ -331,10 +333,10 @@
                                         <a href="">
                                             <img class="img-main"
                                                 src="https://bucket.nhanh.vn/63947a-34605/ps/20200222_8fdpRnFJe7ucHfWQVJ5PSQbV.jpg"
-                                                alt="dong_ho">
+                                                alt="dong-ho">
                                             <img class="img-hover"
                                                 src="https://traffic-edge09.cdn.vncdn.io/cdn-pos/63947a-34605/ps/20230103_Hbpcg4pjkLfhoSuwjXLxEsyx.png"
-                                                alt="dong_ho_2">
+                                                alt="dong-ho-2">
                                         </a>
                                         <a class="btn-xem-nhanh" href="">
                                             XEM NHANH
@@ -358,10 +360,10 @@
                                         <a href="">
                                             <img class="img-main"
                                                 src="https://traffic-edge23.cdn.vncdn.io/cdn-pos/63947a-34605/ps/20221221_F9QAz6z8mObiaLZivYNfwdCL.png"
-                                                alt="dong_ho">
+                                                alt="dong-ho">
                                             <img class="img-hover"
                                                 src="https://traffic-edge09.cdn.vncdn.io/cdn-pos/63947a-34605/ps/20230103_Hbpcg4pjkLfhoSuwjXLxEsyx.png"
-                                                alt="dong_ho_2">
+                                                alt="dong-ho-2">
                                         </a>
                                         <a class="btn-xem-nhanh" href="">
                                             XEM NHANH
@@ -382,10 +384,10 @@
                                         <a href="">
                                             <img class="img-main"
                                                 src="https://traffic-edge23.cdn.vncdn.io/cdn-pos/63947a-34605/ps/20221221_F9QAz6z8mObiaLZivYNfwdCL.png"
-                                                alt="dong_ho">
+                                                alt="dong-ho">
                                             <img class="img-hover"
                                                 src="https://traffic-edge09.cdn.vncdn.io/cdn-pos/63947a-34605/ps/20230103_Hbpcg4pjkLfhoSuwjXLxEsyx.png"
-                                                alt="dong_ho_2">
+                                                alt="dong-ho-2">
                                         </a>
                                         <a class="btn-xem-nhanh" href="">
                                             XEM NHANH
@@ -405,7 +407,7 @@
                                 <a href="">
                                     <span>Tất cả các sản phẩm</span>
                                     <img src="https://trinitystudio.vn/tp/T0250/img/stores/34605/right-arrow.svg"
-                                        alt="mui_ten">
+                                        alt="mui-ten">
                                     </span>
                                 </a>
                             </div>
@@ -414,9 +416,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>>
 
-    <section>
+    <div class="space-main">
         <div id="news">
             <div id="owl-news" class="owl-carousel owl-theme ">
                 <a href=""><img
@@ -437,25 +439,25 @@
             </div>
             <div class="clearfix"></div>
         </div>
-    </section>
+    </div>
 
-    <section>
-        <div id="dang_ky">
+    <div class="space-main">
+        <div id="dang-ky">
             <img src="https://traffic-edge19.cdn.vncdn.io/cdn-pos/63947a-34605/bn/20220120_UbTALaBV6vTvfDH0P74JxwP3.jpg"
                 alt="dang-ky">
-            <div class="form_dang_ky">
+            <div class="form-dang-ky">
                 <div class="wrap">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-12">
-                                <div class="dang_ky_info">
-                                    <div class="dang_ky_content">
+                                <div class="dang-ky-info">
+                                    <div class="dang-ky-content">
                                         <h2>ĐĂNG KÝ NHẬN TIN</h2>
                                         <p>Đăng ký thông tin để cập nhật những khuyến mại mới nhất.</p>
                                         <form action="" method="post">
-                                            <input class="input_dang_ky" type="text" placeholder="Email address">
+                                            <input class="input-dang-ky" type="text" placeholder="Email address">
                                         </form>
-                                        <a href="" class="btn_sign_up">sign up</a>
+                                        <a href="" class="btn-sign-up">sign up</a>
                                     </div>
                                 </div>
                             </div>
@@ -464,9 +466,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
-    <section>
+    <div class="space-main">
         <div class="wrap">
             <div class="container-fluid">
                 <div class="row">
@@ -476,7 +478,7 @@
                 </div>
             </div>
         </div>
-        <div id="he_thong">
+        <div id="he-thong">
             <div id="owl-he-thong" class="owl-carousel owl-theme ">
                 <a href="">
                     <img src="https://traffic-edge31.cdn.vncdn.io/cdn-pos/63947a-34605/bn/20210706_HDhZHnRdZvb8Txue09XerwtU.jpg"
@@ -534,10 +536,10 @@
             <div class="clearfix"></div>
         </div>
 
-    </section>
+    </div>
 
     <footer>
-        <div class="background_footer">
+        <div class="background-footer">
             <div class="wrap">
                 <div class="container-fluid">
                     <div class="row">
@@ -582,25 +584,25 @@
                                                 <b>OLIVIA BURTON SAIGON</b>
                                             </p>
                                             <p>
-                                                <img class="icon_footer"
+                                                <img class="icon-footer"
                                                     src="https://bucket.nhanh.vn/website/template/450/contentKey/2529/pngkit_white-circle-png_158932.png"
                                                     alt="dia-chi">
                                                 B2-16, Vincom Center Đồng Khởi, 72A Lê Thánh Tôn, Quận 1, TP. HCM
                                             </p>
                                             <p>
-                                                <img class="icon_footer"
+                                                <img class="icon-footer"
                                                     src="https://bucket.nhanh.vn/website/template/450/contentKey/2529/%E2%80%94pngtree%E2%80%94white%20call%20icon%20png_3562069.png"
                                                     alt="dien-thoai">
                                                 0964 546 834
                                             </p>
                                             <p>
-                                                <img class="icon_footer"
+                                                <img class="icon-footer"
                                                     src="https://bucket.nhanh.vn/website/template/450/contentKey/2529/pngkit_white-circle-png_158932.png"
                                                     alt="dia-chi">
                                                 L4-37, Giga Mall, 242 Phạm Văn Đồng, Thủ Đức, TP. HCM
                                             </p>
                                             <p>
-                                                <img class="icon_footer"
+                                                <img class="icon-footer"
                                                     src="https://bucket.nhanh.vn/website/template/450/contentKey/2529/%E2%80%94pngtree%E2%80%94white%20call%20icon%20png_3562069.png"
                                                     alt="dien-thoai">
                                                 0964 546 834
@@ -609,13 +611,13 @@
                                                 <b>OLIVIA BURTON HANOI</b>
                                             </p>
                                             <p>
-                                                <img class="icon_footer"
+                                                <img class="icon-footer"
                                                     src="https://bucket.nhanh.vn/website/template/450/contentKey/2529/pngkit_white-circle-png_158932.png"
                                                     alt="dia-chi">
                                                 TĐ-K15, Vincom Mega Mall Times City, 458 Minh Khai, Hà Nội
                                             </p>
                                             <p>
-                                                <img class="icon_footer"
+                                                <img class="icon-footer"
                                                     src="https://bucket.nhanh.vn/website/template/450/contentKey/2529/%E2%80%94pngtree%E2%80%94white%20call%20icon%20png_3562069.png"
                                                     alt="dien-thoai">
                                                 0962 988 445
